# fvn-research-archive-001

./: 01_data_sources.yaml  01_download_raw_data.py  02_build_source_tables.py  02_universe.yaml  03_build_point_in_time_tables.py  03_pipeline.yaml  04_extract_text.py  04_features.yaml  05_extract_xbrl_facts.py  05_model.yaml  06_build_features.py  06_oos_engine.yaml  07_build_labels.py  07_build_model_matrix.py  07_portfolio.yaml  08_baselines.yaml  08_build_model_panel.py  08_build_targets.py  09_ablations.yaml  09_run_dataset_integrity_checks.py  09_train_models.py  10_evaluate_models.py  10_failure_tests.yaml  10_run_oos_engine.py  11_build_portfolio.py  11_run_portfolio.py  11_tearsheet.yaml  12_generate_reports.py  12_run_baselines.py  12_verdict.yaml  13_run_ablations.py  13_run_smoke_pipeline.py  14_check_live_readiness.py  14_run_failure_tests.py  15_generate_institutional_tearsheet.py  15_run_live_pipeline.py  16_generate_final_verdict.py  16_validate_schema_contracts.py  CHANGELOG.md  FINAL_VERDICT.md  (+121 more)
