[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fvn-dfm"
version = "0.1.0"
description = "FVN Research Archive 001 — Disclosure–Fundamental Mismatch"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tqdm>=4.66",
    "matplotlib>=3.8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
